# MoMa

./: .gitignore  README.md
tm_custom/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tm_custom/install/arm_subscriber/lib/arm_subscriber/: safety
tm_custom/install/arm_subscriber/share/arm_subscriber/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tm_custom/install/custom_package/lib/custom_package/: sub_img  tm_send_command
tm_custom/install/custom_package/share/custom_package/: local_setup.sh  package.sh
tm_custom/install/demo/lib/demo/: demo_ask_item  demo_ask_sta  demo_connect_tm  demo_get_feedback  demo_get_sct_response  demo_get_sta_response  demo_get_svr_response  demo_get_torque_feedback  demo_leave_listen_node  demo_send_script  demo_set_event  demo_set_io  demo_set_positions  demo_write_item
tm_custom/install/demo/share/demo/: package.sh  package.xml
tm_custom/install/python_demo/lib/python_demo/: testes
tm_custom/install/python_demo/share/python_demo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tm_custom/install/safety_msgs/share/safety_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tm_custom/install/safety_msgs/share/safety_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_safety_msgs__rosidl_generator_cExport-noconfig.cmake  export_safety_msgs__rosidl_generator_cExport.cmake  export_safety_msgs__rosidl_generator_cppExport.cmake  export_safety_msgs__rosidl_generator_pyExport-noconfig.cmake  export_safety_msgs__rosidl_generator_pyExport.cmake  (+16 more)
tm_custom/install/techman_robot_get_status/lib/techman_robot_get_status/: image_talker  status_talker
tm_custom/install/techman_robot_get_status/share/techman_robot_get_status/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
tm_custom/install/techman_robot_msgs/share/techman_robot_msgs/: local_setup.sh  package.sh  package.xml
tm_custom/install/tm_description/share/tm_description/: local_setup.sh  package.sh  package.xml
tm_custom/install/tm_description/share/tm_description/cmake/: tm_descriptionConfig.cmake
tm_custom/install/tm_driver/share/tm_driver/: local_setup.sh  package.sh
tm_custom/install/tm_mod_urdf/share/tm_mod_urdf/: package.sh  package.xml
tm_custom/install/tm_moveit_config_tm12/share/tm_moveit_config_tm12/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tm_custom/install/tm_moveit_config_tm12x/share/tm_moveit_config_tm12x/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tm_custom/install/tm_moveit_config_tm14/share/tm_moveit_config_tm14/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tm_custom/install/tm_moveit_config_tm14x/share/tm_moveit_config_tm14x/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tm_custom/install/tm_moveit_config_tm5-700/share/tm_moveit_config_tm5-700/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tm_custom/install/tm_moveit_config_tm5-900/share/tm_moveit_config_tm5-900/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tm_custom/install/tm_moveit_config_tm5x-700/share/tm_moveit_config_tm5x-700/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tm_custom/install/tm_moveit_config_tm5x-900/share/tm_moveit_config_tm5x-900/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tm_custom/install/tm_moveit_cpp_demo/lib/tm_moveit_cpp_demo/: run_moveit_cpp
tm_custom/install/tm_moveit_cpp_demo/share/tm_moveit_cpp_demo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tm_custom/install/tm_msgs/share/tm_msgs/: local_setup.sh  package.sh  package.xml
tm_custom/install/ui_for_debug_and_demo/share/ui_for_debug_and_demo/: local_setup.sh  package.sh
tm_custom/log/: latest_build  latest_list
tm_custom/rosbag2_2024_05_09-14_42_06/: metadata.yaml  rosbag2_2024_05_09-14_42_06_0.db3
tm_custom/src/arm_controller/: package.xml  setup.py
tm_custom/src/arm_controller/arm_controller/: controller_node.py
tm_custom/src/arm_subscriber/: setup.cfg  setup.py
tm_custom/src/arm_subscriber/arm_subscriber/: arm_thresholds.yaml  config_loader.py  safety_node.py  threshold.py
tm_custom/src/custom_package/: CMakeLists.txt
tm_custom/src/custom_package/src/: send_command.cpp
tm_custom/src/demo/: CMakeLists.txt
tm_custom/src/demo/src/: demo_ask_item.cpp  demo_ask_sta.cpp  demo_connect_tm.cpp  demo_leave_listen_node.cpp  demo_send_script.cpp  demo_set_event.cpp  demo_set_io.cpp  demo_set_positions.cpp  demo_write_item.cpp
tm_custom/src/open_manipiluator_demo/: package.xml  setup.cfg  setup.py
tm_custom/src/open_manipiluator_demo/open_manipiluator_demo/: safety_demo_port.py
tm_custom/src/python_demo/: setup.cfg  setup.py
tm_custom/src/python_demo/python_demo/: testes.py
tm_custom/src/safety/: setup.py
tm_custom/src/safety/safety/: arm_controller_stow_position.yaml  arm_safety_stow_position.yaml  arm_thresholds.yaml  base_thresholds.yaml  config_loader.py  controller_demo_stow.py  request_node.py  robot_dataclass.py  safety_demo.py  safety_demo_stow.py  safety_node.py  threshold.py
tm_custom/src/techman_robot_get_status/: package.xml  setup.cfg  setup.py
tm_custom/src/techman_robot_msgs/: CMakeLists.txt
tm_custom/src/tm_driver/: CMakeLists.txt
tm_custom/src/tm_mod_urdf/: setup.py
tm_custom/src/tm_moveit_config_tm5-700/: CMakeLists.txt  package.xml
tm_custom/src/tm_moveit_config_tm5-900/: CMakeLists.txt
tm_custom/src/tm_moveit_cpp_demo/: CMakeLists.txt
tm_custom/src/tm_msgs/: CMakeLists.txt
tm_custom/src/tm_msgs/msg/: SetPosition.msg
tm_custom/src/ui_for_debug_and_demo/: CMakeLists.txt  package.xml
(+46 files in other folders)
