<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tm_description</name>
  <version>1.1.1</version>
  <description>URDF description for Techman Robot arms</description>
  <maintainer email="mkiyama@scu.edu">rslomron</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
